# my_judge

./: README.md
my_judge/: .gitignore  B.java  CMakeLists.txt  DartConfiguration.tcl  Makefile  ajudger  build.sh  compiler  complie.sh  dealCompile.cpp  dealComplie  dealComplie.cpp  dealComplie.h  error.info  getTest  getTest.cpp  hello_  install.sh  logger.txt  result  test.py
my_judge/dealCompile/: CMakeLists.txt  dealCompile.cpp  dealCompile.h  tmp
my_judge/judger/: CMakeLists.txt  getTest  logger.txt  result
my_judge/judger/src/: c_cpp.cpp  c_cpp_fileio.cpp  commons.cpp  commons.h  compareIgnoreSpaces.h  guard.cpp  judger.cpp  judger.h  logger.h  main.cpp  runner.cpp  runner.h  seccomp_rules.h
my_judge/problems/MLE/: MLE  data3.myout
my_judge/problems/ahacker/: hack  hack.cpp
my_judge/problems/ahackerTwo/: ahackerTwo  ahackerTwo.cpp
my_judge/problems/cant/: error.info  ha  ha.cpp
my_judge/problems/hell_word/: 1.out  describe.md  hell_word  hell_word.cpp  hell_word.py
my_judge/problems/realtest/: TLE.cpp  wrongAns.cpp
my_judge/problems/runtime/: 144_4.out  runtime.cpp
my_judge/problems/spaceIgnore/: describe.md  space.cpp
my_judge/problems/timeout_example/: 1.myout  describe.md  timeout_example
my_judge/problems/wrongtest/: wrong  wrong.cpp
my_judge/src/: commons.cpp  commons.h  compareIgnoreSpaces.cpp  guard.cpp  guard.h  judger.cpp  logger.cpp  logger.h  main.cpp  runner.cpp  runner.h
my_judge/src/test/: B.java  a.c  a.h  b  b.c  conclusion.md  deal.java  sleep.c  sys  sys.cpp  test  test2.c  test3  test3.cpp  testForpth.c  testSeccomp.c  (+1 more)
(+21 files in other folders)
